--- a/CacheMax.GUI/appsettings.json
+++ b/CacheMax.GUI/appsettings.json
@@ -4,6 +4,33 @@
     "DefaultArguments": "/cmd=force_copy /verify /auto_close /error_stop /no_ui",
     "MaxConcurrency": 3
   },
+  "Robocopy": {
+    "ThreadCount": 64,
+    "RetryCount": 3600,
+    "RetryWaitSeconds": 1,
+    "EnableUnbufferedIO": true,
+    "EnableRestart": false,
+    "EnableLowSpaceMode": false,
+    "EnableCompression": false,
+    "EnableSparseFiles": false,
+    "ShowProgress": true,
+    "ShowETA": true
+  },
+  "ForbiddenDirectories": [
+    "C:\\Windows",
+    "C:\\Program Files",
+    "C:\\Program Files (x86)",
+    "C:\\System Volume Information",
+    "C:\\$Recycle.Bin",
+    "C:\\Recovery",
+    "C:\\Boot",
+    "C:\\EFI",
+    "C:\\Users\\All Users",
+    "C:\\Users\\Default",
+    "C:\\Users\\Public",
+    "C:\\ProgramData",
+    "C:\\Documents and Settings"
+  ],
   "Logging": {
     "LogDirectory": "Logs",
     "LogFileName": "CacheMax.log",
