--- a/CacheMax.GUI/CacheMax.GUI.csproj
+++ b/CacheMax.GUI/CacheMax.GUI.csproj
@@ -8,6 +8,7 @@
     <UseWindowsForms>true</UseWindowsForms>
     <AssemblyName>CacheMax</AssemblyName>
     <RootNamespace>CacheMax.GUI</RootNamespace>
+    <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
 
   <ItemGroup>
