即将彻底完成

--- a/CacheMax.GUI/appsettings.json
+++ b/CacheMax.GUI/appsettings.json
@@ -17,7 +17,7 @@
     "ShowETA": true
   },
   "ForbiddenDirectories": [
-    "C:\\Windows",
+    "C:\\Windows\\*",
     "C:\\Program Files",
     "C:\\Program Files (x86)",
     "C:\\System Volume Information",
